--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,23 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="signIn">Sign In</string>
+    <string name="signUp">Sign Up</string>
+    <string name="Dont_have_Acc">Don\'t have an account?</string>
+    <string name="username">User Name or Email</string>
+    <string name="password">Password</string>
+    <string name="forgetpasword">Forgot password?</string>
+    <string name="uname">User Name</string>
+    <string name="confirmpass">Confirm Password</string>
+    <string name="nicNumber">NIC Number</string>
+    <string name="next">Next</string>
+    <string name="back">Back</string>
+    <string name="email">Email</string>
+    <string name="address">Address</string>
+    <string name="line1">Line 1</string>
+    <string name="line2">Line 2</string>
+    <string name="city">City</string>
+    <string name="state">State/Country</string>
+    <string name="postalCode">Postal code(eg: 10230)</string>
+
 </resources>
