--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">Ceylon Express</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">CEYLON EXPRESS</string>
+    <string name="nav_header_subtitle">www.ceylonexpress.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="signIn">Sign In</string>
@@ -24,5 +24,9 @@
     <string name="city">City</string>
     <string name="state">State/Country</string>
     <string name="postalCode">Postal code(eg: 10230)</string>
+    <string name="letsgo">Let\'s Go</string>
+    <string name="thankyou">Thank you</string>
+    <string name="success">Your CEYLON EXPRESS account is successfully created!</string>
+    <string name="title_activity_deals">deals</string>
 
 </resources>
