--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,13 @@
     <string name="orders">Orders</string>
     <string name="cart">Cart</string>
     <string name="coupons">Coupons</string>
+    <string name="wishlist">Wish list</string>
+    <string name="toberev">To be reviewed</string>
+    <string name="wallet">Wallet</string>
+    <string name="qanda">Question and Answer</string>
+    <string name="settings">Settings</string>
+    <string name="tobeship">To be shipped</string>
+    <string name="shipped">Shipped</string>
+    <string name="help">Help Center</string>
 
 </resources>
